Fixed bugs;  alignment issues, link changes, etc.

--- a/transport/css/index-css.css
+++ b/transport/css/index-css.css
@@ -27,18 +27,18 @@ body{
 #bus{
 	width: 100%;
 	display: block;
-	margin-top: 3%;
+	margin-top: 0%;
 	font-size: 125%;
 	text-align: center;
 	white-space: pre;
 	word-wrap: normal;
 	color: yellow;
-	margin-left: -6%;
+	margin-left: -6.5%;
 }
 
 .intro-text{
 	width: 100%;
-	margin: 0% 0% 2% 0%;
+	margin: 0% 0% 7% 0%;
 	font-size: 125%;
 	text-align: center;
 }
